Add date function

--- a/booking.html
+++ b/booking.html
@@ -4,19 +4,20 @@
     <title>CabsOnline</title> 
     <script type="text/javascript" src="booking.js"></script>
     </head> 
+    
     <body>
     <H1>CabsOnline</H1>
     <form>
-            <label>Customer Name:  <input type="text" name="namefield"> </label>
-            <label><br>Phone Number: <input type="text" name="pwdfield"> <br></label>
-            <label><br>Unit Number: <input type="text" name="pwdfield"> <br></label>
-            <label><br>Street Number: <input type="text" name="pwdfield"> <br></label>
-            <label><br>Street Name: <input type="text" name="pwdfield"> <br></label>
-            <label><br>Suburb: <input type="text" name="pwdfield"> <br></label>
-            <label><br>Destination Suburb: <input type="text" name="pwdfield"> <br></label>
-            <label><br>Pick-Up Date: <input type="text" name="pwdfield"> <br></label>
-            <label><br>Pick-Up Time: <input type="text" name="pwdfield"> <br></label>
-        <input name="submit" type = "button" onClick = "getData('data.php','targetDiv', namefield.value, pwdfield.value) " value = "Fetch from server">
+        <label>Customer Name:  <input type="text" name="cname" required/> </label>
+        <label><br>Phone Number: <input type="text" name="phone" pattern="^\d{10,12}$" required/> <br></label>
+        <label><br>Unit Number: <input type="text" name="unumber"> <br></label>
+        <label><br>Street Number: <input type="text" name="snumber" required/> <br></label>
+        <label><br>Street Name: <input type="text" name="stname" required/> <br></label>
+        <label><br>Suburb: <input type="text" name="sbname"> <br></label>
+        <label><br>Destination Suburb: <input type="text" name="dsbname"> <br></label>
+        <label><br>Pick-Up Date: <input type="date" name="date" id="displayDate" required/> <br></label>
+        <label><br>Pick-Up Time: <input type="time" name="pwdfield"> <br></label>
+        <input name="submit" type = "button" onClick = "getData('booking.php','targetDiv', namefield.value, pwdfield.value) " value = "Fetch from server">
     </form>
     <div id="targetDiv"> 
         <p>The fetched data will go here.</p>  
