--- a/booking.html
+++ b/booking.html
@@ -144,7 +144,7 @@
             <input name="submit" type="submit" value="Book A Cab">
         </form>
         <div id="targetDiv"> 
-            <p>Here</p>
+            <p name="reference">Here</p>
         </div>
     </body>
 </HTML>
