Final modification complete

--- a/admin.html
+++ b/admin.html
@@ -81,6 +81,9 @@
                     </div>
                 </div>
             </form>
+
+            <div id="assignConfirmOutput"></div>
+
             <div id="targetDiv" class="content"> 
                 <table class="table mt-2 is-bordered is-striped is-narrow is-hoverable is-fullwidth">
                     <thead>
@@ -95,7 +98,7 @@
                             <th>Assign</th>
                         </tr>
                     </thead>
-                    <div id="tableBody">No Data</div>
+                    <tbody id="tableBody"><tr><td>No Result</td></tr></tbody>
                 </table>
             </div>
         </div>
