Add feature to display table according to description

--- a/admin.html
+++ b/admin.html
@@ -93,8 +93,8 @@
                             <th>Phone Number</th>
                             <th>Pick Up Subrub</th>
                             <th>Destination Subrub</th>
-                            <th>Pick Up Date</th>
-                            <th>Pick Up Time</th>
+                            <th>Pick Up Date / Time</th>
+                            <th>Status</th>
                             <th>Assign</th>
                         </tr>
                     </thead>
