Fix booking time before current time if date is not today

--- a/admin.html
+++ b/admin.html
@@ -1,3 +1,14 @@
+<!--Author: Matthew Fan-->
+<!--Student ID: 18040157-->
+<!--
+    Description of File:
+    This file is the admin page, it provides search funcation 
+    and assign driver function.
+    It takes in user input reference number, and send the data
+    to the server.
+    Afterwards, display the table as content
+-->
+
 <!DOCTYPE html>
 <HTML XMLns="http://www.w3.org/1999/xHTML"> 
     <head> 
