--- a/booking.html
+++ b/booking.html
@@ -1,4 +1,12 @@
-<!--- file booking.html -->
+<!--Author: Matthew Fan-->
+<!--Student ID: 18040157-->
+<!--
+    Description of File:
+    This file is the home page of the Cabs Online booking system
+    it provides a form for the user to interact with
+    using DOM, it sends the form to the server, after process
+    update the targetDiv area of the webpage
+-->
 <!DOCTYPE html>
 <HTML XMLns="http://www.w3.org/1999/xHTML"> 
     <head> 
@@ -72,7 +80,6 @@
                                                 name="cname"
                                                 placeholder="Jack Smith"
                                                 pattern="[A-Za-z ]{1,42}"
-                                                value="Jack Smith"
                                                 required
                                             />
                                             <span class="icon is-left">
@@ -93,7 +100,6 @@
                                                 id="phone" 
                                                 name="phone" 
                                                 placeholder="0271234567"
-                                                value="0271234567"
                                                 pattern="\d+"
                                                 minlength="10" 
                                                 maxlength="12"
@@ -123,7 +129,6 @@
                                                 id="unumber"
                                                 name="unumber"
                                                 placeholder="3"
-                                                value="3"
                                                 pattern="[1-9A-Za-z ]{1,10}"
                                             >
                                             <span class="icon is-left">
@@ -144,7 +149,6 @@
                                                 id="snumber"
                                                 name="snumber"
                                                 placeholder="38"
-                                                value="38"
                                                 pattern="[1-9A-Za-z ]{1,15}"
                                                 required
                                             />
@@ -166,7 +170,6 @@
                                                 id="stname"
                                                 name="stname"
                                                 placeholder="Wellesley Street"
-                                                value="Wellesley Street"
                                                 pattern="[A-Za-z ]+"
                                                 required
                                             />
@@ -192,7 +195,6 @@
                                                     id="sbname"
                                                     name="sbname"
                                                     placeholder="Auckland CBD"
-                                                    value="Auckland CBD"
                                                     pattern="[A-Za-z ]+"
                                                 />
                                                 <span class="icon is-left">
@@ -213,7 +215,6 @@
                                                     id="dsbname"
                                                     name="dsbname"
                                                     placeholder="Manukau"
-                                                    value="Auckland CBD"
                                                     pattern="[A-Za-z ]+"
                                                     required    
                                                 />
